--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;
+            margin: 0;5
             padding: 0;
             background: url("dotted lines.html") repeat;
             color: #ffffff;
