--- a/main.html
+++ b/main.html
@@ -7,10 +7,60 @@
     <style>
         body {
             font-family: Arial, sans-serif;
-            margin: 0;5
+            margin: 0;
             padding: 0;
             background: url("dotted lines.html") repeat;
             color: #ffffff;
+        }
+        .warning-box {
+            position: fixed;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 50vw;
+            height: 50vh;
+            background: rgba(255, 255, 255, 0.35);
+            border-radius: 30px 30px 0 0;
+            box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.18);
+            backdrop-filter: blur(18px) saturate(180%);
+            -webkit-backdrop-filter: blur(18px) saturate(180%);
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            padding: 32px 24px 24px 24px;
+            border: 1px solid rgba(255, 255, 255, 0.25);
+            z-index: 1000;
+            color: #222;
+            animation: fadeIn 0.5s;
+        }
+        @keyframes fadeIn {
+            from { opacity: 0; transform: translateX(-50%) translateY(40px);}
+            to { opacity: 1; transform: translateX(-50%) translateY(0);}
+        }
+        .warning-box p {
+            font-size: 1.15rem;
+            margin-bottom: 28px;
+            color: #ffffff;
+            font-weight: 500;
+            text-shadow: 0 2px 8px rgba(255, 255, 255, 0.12);
+        }
+        .warning-box button {
+            background: rgba(255, 255, 255, 0.768);
+            border: none;
+            border-radius: 18px;
+            padding: 10px 32px;
+            font-size: 1rem;
+            color: #222;
+            font-weight: bold;
+            cursor: pointer;
+            box-shadow: 0 2px 8px rgba(0,0,0,0.08);
+            transition: background 0.2s, color 0.2s;
+        }
+        .warning-box button:hover {
+            background: #f0f0f0;
+            color: #0077ff;
         }
         .container {
             max-width: 700px;
@@ -29,14 +79,14 @@
         }
         button, input[type="submit"] {
             background: transparent;
-            border: 2px solid #ffffff; /* Increased border width */
+            border: 2px solid #ffffff;
             padding: 10px 22px;
             border-radius: 20px;
             font-size: 1rem;
             cursor: pointer;
             margin-top: 8px;
             transition: all 0.3s ease;
-            color: #ffffff; /* Added white text color */
+            color: #ffffff;
         }
         button:hover, input[type="submit"]:hover {
             background: rgba(255, 255, 255, 0.1);
@@ -46,7 +96,7 @@
             cursor: not-allowed;
         }
         #openCameraBtn {
-            border: 2px solid #ffffff; /* Increased border width */
+            border: 2px solid #ffffff;
         }
         .result-section {
             margin-top: 24px;
@@ -62,6 +112,11 @@
 <body>
     <iframe src="dotted lines.html" style="position:fixed; top:0; left:0; width:100vw; height:100vh; border:none; z-index:-1;"></iframe>
     
+    <div class="warning-box" id="warningBox">
+        <p>Due to Heavy processing server is slow and sometimes website crashes</p>
+        <button onclick="document.getElementById('warningBox').style.display='none'">Okay</button>
+    </div>
+
     <div class="container">
         <h1>Vision Lite</h1>
         <form method="POST" enctype="multipart/form-data">
