--- a/main.html
+++ b/main.html
@@ -114,6 +114,7 @@
     
     <div class="warning-box" id="warningBox">
         <p>Due to Heavy processing server is slow and sometimes website crashes</p>
+        <p>If you want to view model performance, please contact Rutuj Dhodapkar.</p>
         <button onclick="document.getElementById('warningBox').style.display='none'">Okay</button>
     </div>
 
